--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>button-tub</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1 class="main-title">About</h1>
+
+        <div class="wrapper">
+            <img src="#" alt="img">
+            <div class="button-tabs"></div>
+        </div>
+    </div>
 </body>
 </html>
