--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>button-tub</title>
 </head>
 <body>
@@ -11,8 +12,8 @@
         <h1 class="main-title">About</h1>
 
         <div class="wrapper">
-            <img src="#" alt="img">
-            <div class="button-tabs"></div>
+            <img class="img" src="/pic.jpg" alt="img">
+            <div class="tabs"></div>
         </div>
     </div>
 </body>
